--- a/client/src/assets/css/priorityId.css
+++ b/client/src/assets/css/priorityId.css
@@ -64,6 +64,10 @@ code {
   margin-bottom: 30px;
 }
 
+.submitForm {
+  width: 80%;
+}
+
 .itemUpdate {
   display: flex;
   justify-content: center;
